--- a/Assets - Iguana Page/css/style.css
+++ b/Assets - Iguana Page/css/style.css
@@ -1,3 +1,5 @@
+/* Se definen las propiedades del cuerpo y distintos componentes de la página, personalizando su diseño */
+
 body{
   background-color: #000000;
   margin:0;
